--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<style>
-		body {
-			margin: 0;
-			padding: 0;
-		}
-		header {
-			background-color: #FF0000;
-			height: 70px;
-			width: 100%;
-		}
-		footer {
-			background-color: #00FF00;
-			height: 60px;
-			width: 100%;
-			bottom: 0;
-			position: fixed;
-		}
-		footer p {
-			text-align: center;
-		}
-	</style>
+    <title>Page avec Header et Footer</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #FF0000;
+            height: 70px;
+            width: 100%;
+        }
+
+        footer {
+            position: fixed;
+            bottom: 0;
+            background-color: #00FF00;
+            height: 60px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
     <header></header>
-	<main></main>
-	<footer>
-		<p>Holberton School</p>
-	</footer>
+    <footer>Holberton School</footer>
 </body>
 </html>
