--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page avec Header et Footer</title>
 </head>
 <body style="margin: 0; padding: 0;">
     <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
-	<main></main>
-	<footer style="background-color: #00FF00; height: 60px; width: 100%; position: fixed; bottom: 0;">
-		<span style="text-align: center;"><p>Holberton School</p></span>
-	</footer>
+    
+    <footer style="position: fixed; bottom: 0; background-color: #00FF00; height: 60px; width: 100%; display: flex; align-items: center; justify-content: center;">
+        Holberton School
+    </footer>
 </body>
 </html>
