--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width , initial-scale=1.0">
-		<link rel="stylesheet" href="styles/2-common.css">
-		<link rel="stylesheet" href="styles/2-footer.css">
-		<link rel="stylesheet" href="styles/2-header.css">
-	</head>
-	<body>
-		<header></header>
-		<main></main>
-		<footer><p>Holberton School</p></footer>
-	</body>
+<head>
+    <title>Page avec Header et Footer</title>
+    <link rel="stylesheet" type="text/css" href="styles/2-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
+</head>
+<body>
+    <header></header>
+    <footer>Holberton School</footer>
+</body>
 </html>
