--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="styles/3-common.css">
-		<link rel="stylesheet" href="styles/3-footer.css">
-		<link rel="stylesheet" href="styles/3-header.css">
-		<link rel="icon" href="images/icon.png" type="image/x-icon">
-	</head>
-	<body>
-		<header>
-			<div class="logo">
-			</div>
-		</header>
-		<main></main>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+<head>
+    <title>Page with Header and Footer</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles/3-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+    <link rel="icon" type="image/png" href="images/icon.png">
+</head>
+<body>
+    <header>
+        <div class="logo"></div>
+    </header>
+    <footer>Holberton School</footer>
+</body>
 </html>
