--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="styles/4-common.css">
-		<link rel="stylesheet" href="styles/3-footer.css">
-		<link rel="stylesheet" href="styles/3-header.css">
-		<link rel="stylesheet" href="styles/4-filters.css">
-		<link rel="icon" href="images/icon.png" type="image/x-icon">
-	</head>
-	<body>
-		<header>
-			<div class="logo">
-			</div>
-		</header>
-		<main>
-			<div class="contenair">
-				<section class="filters">
-					<button>search</button>
-				</section>
-			</div>
-		</main>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+<head>
+    <title>Page with Header, Footer, and Filters</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+    <link rel="stylesheet" type="text/css" href="styles/4-filters.css">
+    <link rel="icon" type="image/png" href="images/icon.png">
+</head>
+<body>
+    <header>
+        <div class="logo"></div>
+    </header>
+    <div class="container">
+        <section class="filters">
+            <button>Search</button>
+        </section>
+    </div>
+    <footer>Holberton School</footer>
+</body>
 </html>
