--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -16,11 +16,11 @@
     </header>
     <div class="container">
         <section class="filters">
-            <div class="filter locations">
+            <div class="locations">
                 <h3>States</h3>
                 <h4>California, Arizona...</h4>
             </div>
-            <div class="filter amenities">
+            <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Internet, Kitchen...</h4>
             </div>
