--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -12,37 +12,39 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo" style="background-image: url('images/logo.png');"></div>
     </header>
     <div class="container">
         <section class="filters">
-            <div class="filter locations">
+            <div class="locations">
                 <h3>States</h3>
                 <h4>California, Arizona...</h4>
-                <ul class="popover">
-                    <li><h2>Arizona</h2>
-                        <ul>
-                            <li>Page</li>
-                            <li>Page2</li>
-                        </ul>
-                    </li>
-                    <li><h2>California</h2>
-                        <ul>
-                            <li>San Francisco</li>
-                            <li>Los Altos</li>
-                        </ul>
-                    </li>
-                </ul>
+				<ul class="popover">
+					<li>
+						<h2>ARIZONA:</h2>
+						<ul>
+							<li>Page</li>
+							<li>Page2</li>
+						</ul>
+					</li>
+					<li>
+						<h2>CALIFORNIA:</h2>
+						<ul>
+							<li>Sans Fransisco</li>
+							<li>Los Altos</li>
+						</ul>
+					</li>
+				</ul>
             </div>
-            <div class="filter amenities">
+            <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Internet, Kitchen...</h4>
-                <ul class="popover">
-                    <li>Internet</li>
-                    <li>TV</li>
-                    <li>Kitchen</li>
-                    <li>Iron</li>
-                </ul>
+				<ul class="popover">
+					<li>Internet</li>
+					<li>Tv</li>
+					<li>Kitchen</li>
+					<li>Iron</li>
+				</ul>
             </div>
             <button>Search</button>
         </section>
